--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "vue-upload-multiple-image": "^1.1.6",
+        "vue2-dropzone": "^3.6.0"
     }
 }
