--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "v-select2-component": "^0.4.3",
+        "vue-select": "^3.10.8",
+        "vue-select2": "^0.2.6",
         "vue-upload-multiple-image": "^1.1.6",
         "vue2-dropzone": "^3.6.0"
     }
